tweak notebook copy

--- a/first_last/Part1-SPY-Data-Collection.ipynb
+++ b/first_last/Part1-SPY-Data-Collection.ipynb
@@ -127,9 +127,7 @@
    "source": [
     "## Collect historical data\n",
     "\n",
-    "Next, we create a database for collecting 30-min bars for SPY.\n",
-    "\n",
-    "> The `shard` parameter is required for intraday databases and determines how to split up large databases into smaller pieces for better performance. Since our universe contains a relatively small number of securities, we can turn this feature off."
+    "Next, we create a database for collecting 30-min bars for SPY:"
    ]
   },
   {
