get_historical_prices -> get_prices

--- a/first_last/Part4-VIX-Research.ipynb
+++ b/first_last/Part4-VIX-Research.ipynb
@@ -50,12 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantrocket.history import get_historical_prices\n",
-    "vix = get_historical_prices(\"vix-30min\", \n",
-    "                            fields=\"Close\", \n",
-    "                            start_date=returns.index.min(), \n",
-    "                            end_date=returns.index.max(), \n",
-    "                            times=\"14:00:00\")\n",
+    "from quantrocket import get_prices\n",
+    "vix = get_prices(\"vix-30min\", \n",
+    "                 fields=\"Close\", \n",
+    "                 start_date=returns.index.min(), \n",
+    "                 end_date=returns.index.max(), \n",
+    "                 times=\"14:00:00\")\n",
     "\n",
     "# extract VIX and squeeze single-column DataFrame to Series\n",
     "vix = vix.loc[\"Close\"].xs(\"14:00:00\", level=\"Time\").squeeze()"
