--- a/first_last/Part5-Moonshot-Backtest-With-VIX-Filter.ipynb
+++ b/first_last/Part5-Moonshot-Backtest-With-VIX-Filter.ipynb
@@ -20,11 +20,11 @@
     "```python\n",
     "if self.MIN_VIX:\n",
     "    # Query VIX at 15:30 NY time (= close of 14:00:00 bar because VIX is Chicago time)\n",
-    "    vix = get_historical_prices(\"vix-30min\", \n",
-    "                                fields=\"Close\", \n",
-    "                                start_date=signals.index.min(), \n",
-    "                                end_date=signals.index.max(), \n",
-    "                                times=\"14:00:00\")\n",
+    "    vix = get_prices(\"vix-30min\", \n",
+    "                     fields=\"Close\", \n",
+    "                     start_date=signals.index.min(), \n",
+    "                     end_date=signals.index.max(), \n",
+    "                     times=\"14:00:00\")\n",
     "    # extract VIX and squeeze single-column DataFrame to Series\n",
     "    vix = vix.loc[\"Close\"].xs(\"14:00:00\", level=\"Time\").squeeze()\n",
     "    # reshape VIX like signals\n",
