update for v2 API

--- a/first_last/Part1-SPY-Data-Collection.ipynb
+++ b/first_last/Part1-SPY-Data-Collection.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "from quantrocket.launchpad import start_gateways\n",
+    "from quantrocket.ibg import start_gateways\n",
     "start_gateways(wait=True)"
    ]
   },
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "{'status': 'the listing details will be collected asynchronously'}"
+       "{'status': 'the IBKR listing details will be collected asynchronously'}"
       ]
      },
      "execution_count": 2,
@@ -72,8 +72,8 @@
     }
    ],
    "source": [
-    "from quantrocket.master import collect_listings\n",
-    "collect_listings(exchanges=\"ARCA\", sec_types=\"ETF\", symbols=\"SPY\")"
+    "from quantrocket.master import collect_ibkr_listings\n",
+    "collect_ibkr_listings(exchanges=\"ARCA\", sec_types=\"ETF\", symbols=\"SPY\")"
    ]
   },
   {
@@ -83,8 +83,8 @@
     "Monitor flightlog for a completion message:\n",
     "\n",
     "```\n",
-    "quantrocket.master: INFO Collecting ARCA ETF listings from IB website (SPY only)\n",
-    "quantrocket.master: INFO Requesting details for 1 ARCA listings found on IB website\n",
+    "quantrocket.master: INFO Collecting ARCA ETF listings from IBKR website (SPY only)\n",
+    "quantrocket.master: INFO Requesting details for 1 ARCA listings found on IBKR website\n",
     "quantrocket.master: INFO Saved 1 ARCA listings to securities master database\n",
     "```"
    ]
@@ -95,7 +95,7 @@
    "source": [
     "## Lookup SPY\n",
     "\n",
-    "Next, we look up the ConId (contract ID) for SPY. We use the command line interface because less typing is required.\n",
+    "Next, we look up the Sid (security ID) for SPY. We use the command line interface because less typing is required.\n",
     "\n",
     "> Prefixing a line with ! allows running terminal commands from inside a notebook."
    ]
@@ -111,14 +111,14 @@
      "text": [
       "---\n",
       "  - \n",
-      "    ConId: 756733\n",
+      "    Sid: \"FIBBG000BDTBL9\"\n",
       "    Symbol: \"SPY\"\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!quantrocket master get --symbols 'SPY' --exchanges 'ARCA' --sec-types 'ETF' --fields 'ConId' 'Symbol' --json | json2yaml"
+    "!quantrocket master get --symbols 'SPY' --exchanges 'ARCA' --sec-types 'ETF' --fields 'Sid' 'Symbol' --json | json2yaml"
    ]
   },
   {
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "{'status': 'successfully created quantrocket.history.spy-30min.sqlite'}"
+       "{'status': 'successfully created quantrocket.v2.history.spy-30min.sqlite'}"
       ]
      },
      "execution_count": 4,
@@ -147,8 +147,8 @@
     }
    ],
    "source": [
-    "from quantrocket.history import create_db\n",
-    "create_db(\"spy-30min\", conids=756733, bar_size=\"30 mins\", shard=\"off\")"
+    "from quantrocket.history import create_ibkr_db\n",
+    "create_ibkr_db(\"spy-30min\", sids=\"FIBBG000BDTBL9\", bar_size=\"30 mins\", shard=\"off\")"
    ]
   },
   {
@@ -186,8 +186,8 @@
     "Monitor flightlog for completion:\n",
     "\n",
     "```\n",
-    "quantrocket.history: INFO [spy-30min] Collecting history from IB for 1 securities in spy-30min\n",
-    "quantrocket.history: INFO [spy-30min] Saved 49140 total records for 1 total securities to quantrocket.history.spy-30min.sqlite\n",
+    "quantrocket.history: INFO [spy-30min] Collecting history from IBKR for 1 securities in spy-30min\n",
+    "quantrocket.history: INFO [spy-30min] Saved 49140 total records for 1 total securities to quantrocket.v2.history.spy-30min.sqlite\n",
     "```"
    ]
   },
@@ -223,5 +223,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
