--- a/first_last/Part3-VIX-Data-Collection.ipynb
+++ b/first_last/Part3-VIX-Data-Collection.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "{'status': 'the listing details will be collected asynchronously'}"
+       "{'status': 'the IBKR listing details will be collected asynchronously'}"
       ]
      },
      "execution_count": 1,
@@ -46,8 +46,8 @@
     }
    ],
    "source": [
-    "from quantrocket.master import collect_listings\n",
-    "collect_listings(exchanges=\"CBOE\", sec_types=\"IND\")"
+    "from quantrocket.master import collect_ibkr_listings\n",
+    "collect_ibkr_listings(exchanges=\"CBOE\", sec_types=\"IND\")"
    ]
   },
   {
@@ -57,8 +57,8 @@
     "Monitor flightlog for a completion message:\n",
     "\n",
     "```\n",
-    "quantrocket.master: INFO Collecting CBOE IND listings from IB website\n",
-    "quantrocket.master: INFO Requesting details for 206 CBOE listings found on IB website\n",
+    "quantrocket.master: INFO Collecting CBOE IND listings from IBKR website\n",
+    "quantrocket.master: INFO Requesting details for 206 CBOE listings found on IBKR website\n",
     "quantrocket.master: INFO Saved 206 CBOE listings to securities master database\n",
     "```"
    ]
@@ -69,7 +69,7 @@
    "source": [
     "## Lookup VIX\n",
     "\n",
-    "Next, we look up the ConId for VIX."
+    "Next, we look up the Sid for VIX."
    ]
   },
   {
@@ -83,14 +83,14 @@
      "text": [
       "---\n",
       "  - \n",
-      "    ConId: 13455763\n",
+      "    Sid: \"IB13455763\"\n",
       "    Symbol: \"VIX\"\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!quantrocket master get --symbols 'VIX' --exchanges 'CBOE' --sec-types 'IND' --fields 'ConId' 'Symbol' --json | json2yaml"
+    "!quantrocket master get --symbols 'VIX' --exchanges 'CBOE' --sec-types 'IND' --fields 'Sid' 'Symbol' --json | json2yaml"
    ]
   },
   {
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "{'status': 'successfully created quantrocket.history.vix-30min.sqlite'}"
+       "{'status': 'successfully created quantrocket.v2.history.vix-30min.sqlite'}"
       ]
      },
      "execution_count": 3,
@@ -119,8 +119,8 @@
     }
    ],
    "source": [
-    "from quantrocket.history import create_db\n",
-    "create_db(\"vix-30min\", conids=13455763, bar_size=\"30 mins\", shard=\"off\")"
+    "from quantrocket.history import create_ibkr_db\n",
+    "create_ibkr_db(\"vix-30min\", sids=\"IB13455763\", bar_size=\"30 mins\", shard=\"off\")"
    ]
   },
   {
@@ -158,8 +158,8 @@
     "Monitor flightlog for completion:\n",
     "\n",
     "```\n",
-    "quantrocket.history: INFO [vix-30min] Collecting history from IB for 1 securities in vix-30min\n",
-    "quantrocket.history: INFO [vix-30min] Saved 53788 total records for 1 total securities to quantrocket.history.vix-30min.sqlite\n",
+    "quantrocket.history: INFO [vix-30min] Collecting history from IBKR for 1 securities in vix-30min\n",
+    "quantrocket.history: INFO [vix-30min] Saved 53788 total records for 1 total securities to quantrocket.v2.history.vix-30min.sqlite\n",
     "```"
    ]
   },
@@ -195,5 +195,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
