update for version 2, including using usstock data for SPY

--- a/first_last/Introduction.ipynb
+++ b/first_last/Introduction.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# First Half Hour Predicts Last Half Hour\n",
     "\n",
-    "This tutorial demonstrates an intraday momentum strategy that buys (sells) the S&P 500 when the first half hour return and penultimate half hour return are both positive (negative). Positions are held from 3:30-4:00 PM. A filter is applied to disable the strategy whenever the VIX is below 20, reflecting that the strategy works best during high volatility regimes. The strategy uses 30-minute data from Interactive Brokers.  \n",
+    "This tutorial demonstrates an intraday momentum strategy that buys (sells) the S&P 500 when the first half hour return and penultimate half hour return are both positive (negative). Positions are held from 3:30-4:00 PM. A filter is applied to disable the strategy whenever the VIX is below 20, reflecting that the strategy works best during high volatility regimes. The strategy uses 1-min data for SPY from QuantRocket's US Stock dataset and uses 30-minute data from Interactive Brokers for VIX.  \n",
     "\n",
     "\n",
     "**Source paper**: Gao, Lei and Han, Yufeng and Li, Sophia Zhengzi and Zhou, Guofu, Intraday Momentum: The First Half-Hour Return Predicts the Last Half-Hour Return (June 28, 2015). Available at SSRN: https://ssrn.com/abstract=2552752 "
@@ -49,9 +49,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
