--- a/first_last/Part1-SPY-Data-Collection.ipynb
+++ b/first_last/Part1-SPY-Data-Collection.ipynb
@@ -15,14 +15,16 @@
    "source": [
     "# SPY Data Collection\n",
     "\n",
-    "We will backtest the trading strategy using the SPY ETF. The data collection process consists of collecting the SPY listing from ARCA, then collecting 30 minute bars."
+    "We will backtest the trading strategy using the SPY ETF. The data collection process consists of collecting US Stocks listings, then collecting 1 minute bars for SPY."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, start IB Gateway:"
+    "## Collect SPY listing\n",
+    "\n",
+    "First, collect US Stock listings:"
    ]
   },
   {
@@ -33,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "{'ibg1': {'status': 'running'}}"
+       "{'status': 'success', 'msg': 'successfully loaded US stock listings'}"
       ]
      },
      "execution_count": 1,
@@ -42,51 +44,8 @@
     }
    ],
    "source": [
-    "from quantrocket.ibg import start_gateways\n",
-    "start_gateways(wait=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Collect SPY listing\n",
-    "\n",
-    "Then collect the listing:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'status': 'the IBKR listing details will be collected asynchronously'}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from quantrocket.master import collect_ibkr_listings\n",
-    "collect_ibkr_listings(exchanges=\"ARCA\", sec_types=\"ETF\", symbols=\"SPY\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Monitor flightlog for a completion message:\n",
-    "\n",
-    "```\n",
-    "quantrocket.master: INFO Collecting ARCA ETF listings from IBKR website (SPY only)\n",
-    "quantrocket.master: INFO Requesting details for 1 ARCA listings found on IBKR website\n",
-    "quantrocket.master: INFO Saved 1 ARCA listings to securities master database\n",
-    "```"
+    "from quantrocket.master import collect_usstock_listings\n",
+    "collect_usstock_listings()"
    ]
   },
   {
@@ -102,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,12 +72,13 @@
       "  - \n",
       "    Sid: \"FIBBG000BDTBL9\"\n",
       "    Symbol: \"SPY\"\n",
+      "    Exchange: \"ARCX\"\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!quantrocket master get --symbols 'SPY' --exchanges 'ARCA' --sec-types 'ETF' --fields 'Sid' 'Symbol' --json | json2yaml"
+    "!quantrocket master get --symbols 'SPY' --sec-types 'ETF' --fields 'Sid' 'Symbol' 'Exchange' --json | json2yaml"
    ]
   },
   {
@@ -127,7 +87,35 @@
    "source": [
     "## Collect historical data\n",
     "\n",
-    "Next, we create a database for collecting 30-min bars for SPY:"
+    "Next, we create a Zipline bundle for collecting 1-min bars for SPY:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'success', 'msg': 'successfully created usstock-1min bundle'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from quantrocket.zipline import create_usstock_bundle\n",
+    "create_usstock_bundle(\"usstock-1min\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then collect the data for SPY:"
    ]
   },
   {
@@ -138,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "{'status': 'successfully created quantrocket.v2.history.spy-30min.sqlite'}"
+       "{'status': 'the data will be ingested asynchronously'}"
       ]
      },
      "execution_count": 4,
@@ -147,36 +135,8 @@
     }
    ],
    "source": [
-    "from quantrocket.history import create_ibkr_db\n",
-    "create_ibkr_db(\"spy-30min\", sids=\"FIBBG000BDTBL9\", bar_size=\"30 mins\", shard=\"off\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then collect the data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'status': 'the historical data will be collected asynchronously'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from quantrocket.history import collect_history\n",
-    "collect_history(\"spy-30min\")"
+    "from quantrocket.zipline import ingest_bundle\n",
+    "ingest_bundle(\"usstock-1min\", sids=\"FIBBG000BDTBL9\")"
    ]
   },
   {
@@ -186,8 +146,11 @@
     "Monitor flightlog for completion:\n",
     "\n",
     "```\n",
-    "quantrocket.history: INFO [spy-30min] Collecting history from IBKR for 1 securities in spy-30min\n",
-    "quantrocket.history: INFO [spy-30min] Saved 49140 total records for 1 total securities to quantrocket.v2.history.spy-30min.sqlite\n",
+    "quantrocket.zipline: INFO [usstock-1min] Collecting minute bars for 1 securities in usstock-1min bundle\n",
+    "quantrocket.zipline: INFO [usstock-1min] Collecting daily bars for usstock-1min bundle\n",
+    "quantrocket.zipline: INFO [usstock-1min] Collecting adjustments for usstock-1min bundle\n",
+    "quantrocket.zipline: INFO [usstock-1min] Collecting assets for usstock-1min bundle\n",
+    "quantrocket.zipline: INFO [usstock-1min] Completed collecting data for 1 securities in usstock-1min bundle\n",
     "```"
    ]
   },
@@ -219,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
