--- a/first_last/Part3-VIX-Data-Collection.ipynb
+++ b/first_last/Part3-VIX-Data-Collection.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "# VIX Data Collection\n",
     "\n",
-    "The backtest revealed that this strategy was mainly profitable during the 2008 financial crisis. In line with this observation, the authors of the source paper note that the predictive power of the first half hour is greater during periods of high volatility.\n",
+    "The backtest revealed that this strategy was mainly profitable during the 2008 financial crisis and again in 2020 during the COVID-19 pandemic. In line with this observation, the authors of the source paper note that the predictive power of the first half hour is greater during periods of high volatility.\n",
     "\n",
-    "We will use intraday VIX data to investigate this observation further."
+    "We will use intraday VIX data to investigate this observation further. This data comes from Interactive Brokers."
    ]
   },
   {
@@ -26,7 +26,7 @@
    "source": [
     "## Collect CBOE index listings\n",
     "\n",
-    "First, collect all index listings from CBOE:"
+    "First, start IB Gateway:"
    ]
   },
   {
@@ -37,10 +37,38 @@
     {
      "data": {
       "text/plain": [
-       "{'status': 'the IBKR listing details will be collected asynchronously'}"
+       "{'ibg1': {'status': 'running'}}"
       ]
      },
      "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from quantrocket.ibg import start_gateways\n",
+    "start_gateways(wait=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, collect all index listings from CBOE:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'the IBKR listing details will be collected asynchronously'}"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +141,7 @@
        "{'status': 'successfully created quantrocket.v2.history.vix-30min.sqlite'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +169,7 @@
        "{'status': 'the historical data will be collected asynchronously'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
