--- a/first_last/Part1-SPY-Data-Collection.ipynb
+++ b/first_last/Part1-SPY-Data-Collection.ipynb
@@ -12,6 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "[First Half Hour Predicts Last Half Hour](Introduction.ipynb) › Part 1: Data Collection\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# SPY Data Collection\n",
     "\n",
     "We will backtest the trading strategy using the SPY ETF. The data collection process consists of collecting US Stocks listings, then collecting 1 minute bars for SPY."
@@ -167,7 +176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
