--- a/first_last/Part2-Moonshot-Backtest.ipynb
+++ b/first_last/Part2-Moonshot-Backtest.ipynb
@@ -12,6 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "[First Half Hour Predicts Last Half Hour](Introduction.ipynb) › Part 2: Moonshot Backtest\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Moonshot Strategy Code"
    ]
   },
@@ -243,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
