--- a/first_last/Part3-VIX-Data-Collection.ipynb
+++ b/first_last/Part3-VIX-Data-Collection.ipynb
@@ -12,6 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "[First Half Hour Predicts Last Half Hour](Introduction.ipynb) › Part 3: VIX Data Collection\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# VIX Data Collection\n",
     "\n",
     "The backtest revealed that this strategy was mainly profitable during the 2008 financial crisis and again in 2020 during the COVID-19 pandemic. In line with this observation, the authors of the source paper note that the predictive power of the first half hour is greater during periods of high volatility.\n",
@@ -204,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
