--- a/first_last/Part4-VIX-Research.ipynb
+++ b/first_last/Part4-VIX-Research.ipynb
@@ -12,6 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "[First Half Hour Predicts Last Half Hour](Introduction.ipynb) › Part 4: VIX Research\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# VIX Research\n",
     "\n",
     "To quantify the effect of volatility on our trading strategy, we will subdivide the backtest returns based on whether the VIX was above or below 20 at the time of the trading signal.\n",
@@ -138,7 +147,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
