--- a/first_last/Part5-Moonshot-Backtest-With-VIX-Filter.ipynb
+++ b/first_last/Part5-Moonshot-Backtest-With-VIX-Filter.ipynb
@@ -12,6 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "[First Half Hour Predicts Last Half Hour](Introduction.ipynb) › Part 5: Moonshot Backtest with VIX Filter\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Moonshot Backtest With VIX Filter\n",
     "\n",
     "The trading strategy implementation in `first_last.py` includes a `MIN_VIX` parameter, which, if set, applies the VIX filter from the previous notebook:\n",
@@ -189,7 +198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
